# build-your-own-deep-research-agent

./: README.md  airpods_report.md  input_test.py  prompt.py  pyproject.toml
steps/: README.md
steps/0-no-tools/: agent.py
steps/05-hooks/: agent.py
steps/06-creating-an-agent/: agent.py  state.py  tools.py
steps/07-subagents/: agent.py  app.py  state.py  tools.py
steps/08-beautifuying-the-outputs/: agent.py  tools.py
steps/09-generating-a-plan/: agent.py  app.py  state.py  tools.py
steps/10-adding-open-telemetry/: agent.py  app.py  state.py  tools.py
workshop/1 - Writing an Agent Framework/: agent_with_final_hook.py  agent_with_state.py  final_agent.py
workshop/2 - Creating a Plan/: agent.py  plan.py  search.py
workshops/1 - Generating our Research Plan/: questions.py  questions_with_plan.py  response.py  tools.py
workshops/2 - migrating to Textual/: README.md  shell.py
workshops/archive/2 - Creating our minimal agent/: README.md  agent_tools.py  main.py
